grammar.js
    source_file: $ => seq(
      $.package_clause,
      list(
        terminator,
        optional(choice(
          $.foreign_block,
          $._declaration,
          $.import_declaration,
        )),
      )
    ),


    package_clause: $ => seq(
      alias('package', $.keyword),
      $._package_identifier
    ),

    import_declaration: $ => seq(
      alias('import', $.keyword),
      optional(field('name', choice(
        $.blank_identifier,
        $._package_identifier
      ))),
      field('path', $._string_literal)
    ),

    _declaration: $ => seq(
        optional($.pragma),
        choice(
          $.var_declaration,
          $.const_declaration,
        )
    ),

    _package_identifier: $ => alias($.identifier, $.package_identifier),

    _string_literal: $ => choice(
      $.raw_string_literal,
      $.interpreted_string_literal
    ),

    interpreted_string_literal: $ => seq(
      '"',
      repeat(choice(
        token.immediate(prec(1, /[^"\n\\]+/)),
        $.escape_sequence
      )),
      '"'
    ),
